# std_version

./: .clang-format  .commitlintrc.json  CMakeLists.txt  LICENSE.md  README.md  conanfile.txt  package.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-project.yml  check-reuse.yml  cmake.yml  commitlint.yml  lint-commits.yml  reuse.yml
.reuse/: dep5
include/version/: version.hpp
tests/: CMakeLists.txt  print_ns.cpp  test.cpp
